# acecode

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  README_CN.md  main.cpp  vcpkg.json
.github/workflows/: package.yml
src/: agent_loop.cpp  agent_loop.hpp  permissions.hpp  tui_state.hpp
src/commands/: builtin_commands.cpp  command_registry.hpp  compact.cpp  compact.hpp  compact_prompt.cpp  compact_prompt.hpp  micro_compact.cpp  micro_compact.hpp
src/config/: config.cpp  config.hpp
src/markdown/: markdown_formatter.cpp  markdown_formatter.hpp  markdown_lexer.cpp  markdown_lexer.hpp  markdown_types.hpp  syntax_highlight.cpp  syntax_highlight.hpp
src/prompt/: system_prompt.cpp
src/provider/: llm_provider.hpp
src/session/: session_manager.cpp  session_manager.hpp  session_serializer.cpp  session_serializer.hpp  session_storage.cpp  session_storage.hpp
src/tool/: bash_tool.cpp  file_edit_tool.cpp  file_read_tool.cpp  file_write_tool.cpp  glob_tool.cpp  grep_tool.cpp  tool_executor.cpp  tool_executor.hpp
src/utils/: encoding.hpp  path_validator.hpp  uuid.hpp
world/: index.html
